Consume appcenter-file-upload-client-node as a package (#1021)
The [original PR]( https://github.com/microsoft/appcenter-cli/pull/978)'s description:

> It was decided to treat mc-fus as a separate library and publish it to npm without creating a separate repo.
> This PR makes it a proper library and moves to the root of the repo (for visibility).
> Also did some minor renaming to differentiate it with the original mc-fus library for web.
> This PR also adds an additional step to CI that builds the library.

The changes to the original PR:
- [x] fixed vulnerabilities in the ac-fus-lib dev dependencies
- [x] ac-fus-lib connected as an npm dependency in the main package.json, it should fix the [linux issue](https://github.com/microsoft/appcenter-cli/issues/1007)
- [x] ac-fus-lib types are imported from the npm dependency

Tested:
- [x] manually
- [x] with `npm test` and `npm test:ci`
- [x] ci tests

Related work items:
[AB#82467](https://msmobilecenter.visualstudio.com/Mobile-Center/_boards/board/t/IvanM-Team/Backlog%20Items/?workitem=82467)
[AB#82466](https://msmobilecenter.visualstudio.com/Mobile-Center/_boards/board/t/IvanM-Team/Backlog%20Items/?workitem=82466)

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ jobs:
 
   - script: |
       npm run test:ci || [ -f './test-results.xml' ]
-    displayName: 'Run tests (with JUnit output)'
+    displayName: 'Run CLI tests (with JUnit output)'
 
   - task: PublishTestResults@2
     inputs:
@@ -48,8 +48,33 @@ jobs:
       testResultsFiles: 'test-results.xml'
       searchFolder: '$(Build.SourcesDirectory)'
       failTaskOnFailedTests: true
-      testRunTitle: 'Unit tests'
-    displayName: 'Verify unit test result'
+      testRunTitle: 'CLI unit tests'
+    displayName: 'Verify CLI unit test result'
+
+  - script: |
+      npm ci
+      npm run build
+    displayName: 'Install and build appcenter-file-upload-client-node'
+    workingDirectory: appcenter-file-upload-client-node
+
+  - script: |
+      npm run test:ci || [ -f './test-results.xml' ]
+    displayName: 'Run appcenter-file-upload-client-node tests'
+    workingDirectory: appcenter-file-upload-client-node
+
+  - task: PublishTestResults@2
+    inputs:
+      testResultsFormat: 'JUnit'
+      testResultsFiles: 'test-results.xml'
+      searchFolder: '$(Build.SourcesDirectory)/appcenter-file-upload-client-node'
+      failTaskOnFailedTests: true
+      testRunTitle: 'appcenter-file-upload-client-node unit tests'
+    displayName: 'Verify appcenter-file-upload-client-node unit test result'
+
+  - script: |
+      npm pack
+      npm install -g appcenter-cli*.tgz
+    displayName: 'Package appcenter-cli'
 
   - task: AzureKeyVault@1
     inputs:
@@ -62,7 +87,7 @@ jobs:
       filePath: '$(Build.SourcesDirectory)/test/functional/Invoke-FunctionalTests.ps1'
       arguments: '-Token $(ac-cli-account-api-token)'
       pwsh: true
-    displayName: 'Functional tests'
+    displayName: 'Run functional tests'
 
   - script: |
       [ -f './test/functional/testresult.xml' ]
@@ -74,7 +99,7 @@ jobs:
       testResultsFiles: 'testresult.xml'
       searchFolder: '$(Build.SourcesDirectory)/test/functional'
       failTaskOnFailedTests: true
-      testRunTitle: 'Verify functional test result'
+      testRunTitle: 'Functional tests'
     displayName: 'Verify functional test result'
 
   - script: |
