--- a/src/commands/test/lib/templates/appium/ios/pom.xml
+++ b/src/commands/test/lib/templates/appium/ios/pom.xml
@@ -24,6 +24,22 @@
       <artifactId>appium-test-extension</artifactId>
       <version>1.6</version>
     </dependency>
+    <!-- Following packages are not used in project directly, they added to fix vulnerability alerts -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>5.3.18</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-expression</artifactId>
+      <version>5.3.17</version>
+    </dependency>
   </dependencies>
 
   <profiles>
