--- a/appcenter-file-upload-client-node/package.json
+++ b/appcenter-file-upload-client-node/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "abort-controller": "3.0.0",
     "node-fetch": "~2.6.7",
-    "proxy-agent": "5.0.0"
+    "proxy-agent": "5.0.0",
+    "vm2": "^3.9.16"
   }
 }
