[appcenter-file-upload-client node] Remove deprecated VM2 package (#2387)
* Fix-vm2-vulnerability

* Update AC-FUS-UTIL

* Update Typescript version

* Update typescript to 5.1.6

* Update Node version on pipelines

--- a/appcenter-file-upload-client-node/package.json
+++ b/appcenter-file-upload-client-node/package.json
@@ -35,12 +35,12 @@
     "prettier": "2.4.1",
     "ts-node": "9.1.1",
     "typemoq": "2.1.0",
-    "typescript": "3.8.3",
+    "typescript": "^5.1.6",
     "uuid": "7.0.3"
   },
   "dependencies": {
     "abort-controller": "3.0.0",
     "node-fetch": "~2.6.7",
-    "proxy-agent": "5.0.0"
+    "proxy-agent": "6.3.0"
   }
 }
