--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-security": "1.4.0",
+    "fast-xml-parser": "4.2.4",
     "gulp": "4.0.2",
     "gulp-clean": "0.4.0",
     "gulp-sourcemaps": "3.0.0",
@@ -101,7 +102,6 @@
     "sinon": "11.1.2",
     "ts-node": "9.1.1",
     "typemoq": "2.1.0",
-    "fast-xml-parser": "4.2.4",
     "typescript": "4.3.5"
   },
   "dependencies": {
@@ -119,7 +119,7 @@
     "cli-table3": "0.6.2",
     "date-fns": "2.29.3",
     "debug": "4.3.4",
-    "es5-ext": "0.10.53",
+    "es5-ext": "^0.10.64",
     "from2": "2.3.0",
     "glob": "7.2.0",
     "gradle-to-js": "2.0.1",
@@ -140,7 +140,7 @@
     "qs": "6.11.0",
     "rimraf": "3.0.2",
     "rxjs": "6.6.7",
-    "semver": "7.3.5",
+    "semver": "^7.6.0",
     "split2": "3.2.2",
     "strip-ansi": "6.0.0",
     "temp": "0.9.4",
