--- a/src/commands/test/lib/templates/appium/android/pom.xml
+++ b/src/commands/test/lib/templates/appium/android/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>spring-expression</artifactId>
       <version>5.3.27</version>
     </dependency>
+    <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context</artifactId>
+    <version>5.3.27</version>
+  </dependency>
   </dependencies>
 
   <profiles>
